--- a/page.html
+++ b/page.html
@@ -7,6 +7,7 @@
     <title>Chrome</title>
 </head>
 <body>
+    <img src="https://sl.bing.net/bjlasKljrbw" alt="Error pic">
     <p><h2>No internet</h2></p>
     <p>No internet</p>
     <p>Try: </p>
